--- a/AngularMVCProject/Web.config
+++ b/AngularMVCProject/Web.config
@@ -4,12 +4,11 @@
   https://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
-  <appSettings>
-    <add key="webpages:Version" value="3.0.0.0" />
-    <add key="webpages:Enabled" value="false" />
-    <add key="PreserveLoginUrl" value="true" />
-    <add key="ClientValidationEnabled" value="true" />
-    <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+ <appSettings>
+    <add key="JWT_SECRET_KEY"     value="clave-secreta-api"/>
+    <add key="JWT_AUDIENCE_TOKEN" value="http://localhost:44300"/>
+    <add key="JWT_ISSUER_TOKEN"   value="http://localhost:44300"/>
+    <add key="JWT_EXPIRE_MINUTES" value="30"/>   
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
