--- a/AngularMVCProject/Web.config
+++ b/AngularMVCProject/Web.config
@@ -5,10 +5,10 @@
   -->
 <configuration>
  <appSettings>
-    <add key="JWT_SECRET_KEY"     value="clave-secreta-api"/>
-    <add key="JWT_AUDIENCE_TOKEN" value="http://localhost:44300"/>
-    <add key="JWT_ISSUER_TOKEN"   value="http://localhost:44300"/>
-    <add key="JWT_EXPIRE_MINUTES" value="30"/>   
+    <add key="JWT_SECRET_KEY" value="clave-secreta-api" />
+    <add key="JWT_AUDIENCE_TOKEN" value="http://localhost:44300" />
+    <add key="JWT_ISSUER_TOKEN" value="http://localhost:44300" />
+    <add key="JWT_EXPIRE_MINUTES" value="30" />   
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
@@ -58,6 +58,22 @@
       <dependentAssembly>
         <assemblyIdentity name="WebGrease" publicKeyToken="31bf3856ad364e35" />
         <bindingRedirect oldVersion="0.0.0.0-1.5.2.14234" newVersion="1.5.2.14234" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Runtime.CompilerServices.Unsafe" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.6.0" newVersion="4.0.6.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Threading.Tasks.Extensions" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.2.0.1" newVersion="4.2.0.1" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.ValueTuple" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.3.0" newVersion="4.0.3.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Buffers" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.3.0" newVersion="4.0.3.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
