--- a/AngularMVCProject/Web.config
+++ b/AngularMVCProject/Web.config
@@ -85,6 +85,6 @@
     </compilers>
   </system.codedom>
     <connectionStrings>
-		<add name="BDLocal" connectionString="Server=AR-IT02462\\SQLEXPRESS01;Database=dbHomeBank;User Id=mari;Password=Login1234;" />
+		<add name="dbHomeBank" connectionString="Server=localhost\SQLEXPRESS;Database=dbHomeBank;User Id=mari;Password=Login1234;" />
 	</connectionStrings>
 </configuration>
